recursion.logo.lessons.recursion.logo.koch.PentaKoch.scala.error
PentaKoch:7: error: not found: value squareSide
    squareSide(levels-1,length*0.4)
    ^PentaKoch:10: error: not found: value squareSide
    squareSide(levels-1,length*0.4)
    ^PentaKoch:13: error: not found: value squareSide
    squareSide(levels-1,length*0.4)
    ^PentaKoch:16: error: not found: value squareSide
    squareSide(levels-1,length*0.4)
    ^PentaKoch:19: error: not found: value squareSide
    squareSide(levels-1,length*0.4)
    ^